# This is a standalone crate intentionally excluded from the root workspace.
# It builds as a separate maturin extension (see Makefile build-test-user-ext).
[workspace]

[package]
name = "phase4-roundtrip-cst"
version = "0.1.0"
edition = "2021"

[lib]
name = "phase4_roundtrip_cst"
crate-type = ["cdylib"]

[features]
default = ["extension-module"]
extension-module = ["python", "pyo3/extension-module"]
python = ["fltk-cst-core/python"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
fltk-cst-core = { path = "../../crates/fltk-cst-core", default-features = false }
