[workspace]

[package]
name = "rust-parser-fixture"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "rust_parser_fixture"
crate-type = ["rlib", "cdylib"]

[features]
python = ["dep:pyo3", "fltk-cst-core/python"]
extension-module = ["python", "pyo3/extension-module"]
test-introspection = ["python", "fltk-cst-core/test-introspection"]

[dependencies]
fltk-cst-core = { path = "../../crates/fltk-cst-core", default-features = false }
fltk-parser-core = { path = "../../crates/fltk-parser-core" }
fltk-unparser-core = { path = "../../crates/fltk-unparser-core" }
pyo3 = { version = "0.29", features = ["abi3-py310"], optional = true }
