# This is a standalone crate intentionally excluded from the root workspace.
# It builds as a separate maturin extension (see Makefile build-poc-cst).
[workspace]

[package]
name = "poc-cst"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "poc_cst"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["python", "pyo3/extension-module"]
python = ["dep:pyo3", "fltk-cst-core/python"]
test-introspection = ["python", "fltk-cst-core/test-introspection"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py310"], optional = true }
fltk-cst-core = { path = "../../crates/fltk-cst-core", default-features = false }
